--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,6 +32,12 @@ header {
 i{
     pointer-events: none !important;
 }
+.listaPosts{
+    padding-bottom: 120px;
+}
+.post{
+    transition: linear 2s;
+}
 /*
 1. Para questões visuais é necessário ter no mínimo os seguintes requisitos CSS.
 Avaliação Final
